--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,32 +1,183 @@
+:root {
+  /* paleta de colores */
+  --primary-solid: rgb(255, 51, 51);
+  --primary-900: rgb(255, 51, 51, 0.9);
+  --primary-500: rgb(255, 51, 51, 0.5);
+  --primary-300: rgb(255, 51, 51, 0.3);
+
+  --secondary-solid: rgb(29, 132, 181);
+  --secondary-900: rgb(29, 132, 181, 0.9);
+  --secondary-500: rgb(29, 132, 181, 0.5);
+  --secondary-300: rgb(29, 132, 181, 0.3);
+
+  --dark-solid: rgb(31, 31, 31);
+  --dark-900: rgb(31, 31, 31, 0.9);
+  --dark-500: rgb(31, 31, 31, 0.5);
+  --dark-300: rgb(31, 31, 31, 0.3);
+
+  /* background oscuro y claro: */
+  --dark-bg--solid: #30343f;
+  --light-bg-solid: #fafaff;
+  --light-font-solid: #ffffff;
+
+  /* tipografias: */
+  --base-font: Arial, Helvetica, sans-serif;
+  --alternative-font: Verdana, Geneva, Tahoma, sans-serif;
+
+  /* font-size */
+  --font-display: 4.6em;
+  --font-jumbo: 3.8em;
+  --font-xlarge: 3em;
+  --font-large: 2.4em;
+  --font-medium: 1.8em;
+  --font-small: 1.6em;
+  --font-xsmall: 1.4em;
+
+  /* spacing */
+  --spacing-128: 12.8rem;
+  --spacing-68: 6.8rem;
+  --spacing-36: 3.6rem;
+  --spacing-28: 2.8rem;
+  --spacing-24: 2.4rem;
+  --spacing-20: 2rem;
+  --spacing-16: 1.6rem;
+  --spacing-12: 1.2rem;
+  --spacing-8: 0.8rem;
+}
+
+
 *{
-    margin: 0;
-    padding:0 ;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  /*indica como se comportararn los margenes y los rellenos, la otra es content-box*, toma todo lo que agreguemos, se descontrola/*/
+  /*con border toma los contenidos hacia adentro*/
 }
-html{
-    font-size: 62.5%;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+
+html {
+  /* el tamaño por defecto del navegador es 16px, le ponemos desde la raiz, el 62.5, para que que 10px, y todos los rem y em estaran referidos a un valor entero. 1em=10px, ahora */
+  font-family: var(--base-font);
+  font-size: 62.5%;
+  color: var(--dark-solid);
 }
-#cabeza{
-    width: 95%;
-    height: 80px;
-    border: 1px solid black;
-    display: flex;
-    flex-direction: row;
-    font-size: 1.5em;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    justify-content: end;
+/*saco los subrayados de los enlaces*/
+a {
+  text-decoration: none;
+  font-family: inherit;
+  color: inherit;
 }
-ul,li{
-    list-style-type: none;
-    display: flex;
-    flex-direction: row;
+header,
+footer {
+  font-family: var(--alternative-font);
+  color: var(--light-font-solid);
+}
+
+ul,
+ol {
+  list-style-type: none;
+  color: white;
+}
+p {
+  font-size: 1.8em;
+}
+/* fijo el width que se referira siempre a la etiqueta del padre */
+img{
+  width: 100%;
+}
+/* limitamos el ancho del contenedor de la pagina a 1200px, que es lo maximo que crecera aun en resoluciones mayores */
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+/*header*/
+header {
+  background-color: var(--dark-bg--solid);
+  padding: var(--spacing-36);
+}
+.nabvar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+ 
+}
+.nabvar__logo{
+  max-width: 300px;
+ ;
+
+}
+.nabvar__menu {
+  display: flex;
+  align-items: center;
+  gap: var(--spacing-20);
+}
+.nabvar__link{
+  font-size: var(--font-medium);
+  padding: var(--spacing-8) var(--spacing-16);
+display: inline-block;
+transition: background 0.3s ease-in-out;
+}
+
+.nabvar__link:hover {
+  background-color: var(--primary-900);
+}
+.hero{
+  background-image: url(../img/multimedia/funkos-banner.webp);
+  padding: var(--spacing-128);
+  background-size: cover;
+  /* fijamos al fondo de la pantalla la imagen al hacer scroll */
+  background-attachment: fixed;
+
+}
+.hero__content{
+  display: flex;
+  flex-direction: column;
+  gap:var(--spacing-20);
+  align-items: start;
+
+}
+.hero__title{
+  font-family: var(--alternative-font);
+  font-size: var(--font-jumbo);
+  color: var(--light-font-solid);
+}
+.hero__text{
+  font-family: var(--alternative-font);
+  font-size: var(--font-medium);
+  color: var(--light-font-solid);
+} 
+.hero__link{
+  display: inline-block;
+  font-size: var(--font-medium);
+  background-color: var(--light-bg-solid);
+  padding: var(--spacing-12) var(--spacing-68);
+  border-radius:50px;
+  font-weight: 500;
+  transition: background 0.3s ease-out;
+}
+.hero__link:hover{
+  background-color:var(--primary-900) ;
+  color: var(--light-font-solid);
+}
+/* collections */
+.collection {
+  display:grid;
+  grid-template-columns: repeat(50%,50%);
   align-items: center;
 }
-a{
-    text-decoration: none;
-    font-family: inherit;
-    margin:20px;
-
+.collection__content{
+  display: flex;
+  flex-direction: column;
+  gap: var(--spacing-24);
 }
-
+.collection__title{
+  font-family: var(--alternative-font);
+  font-size: var(--font-display);
+  font-weight: 500;
+}
+.collection__text{
+  font-family: var(--alternative-font);
+  font-size: var(--font-large);
+  font-weight: 300;
+  border-bottom: 2px solid var(--primary-solid);
+  padding-bottom: var(--spacing-20);
+}
