--- a/estilos/style.css
+++ b/estilos/style.css
@@ -160,14 +160,22 @@ transition: background 0.3s ease-in-out;
 }
 /* collections */
 .collection {
-  display:grid;
-  grid-template-columns: repeat(50%,50%);
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
   align-items: center;
+  padding: var(--spacing-16) 0;
 }
-.collection__content{
+/* con lo siguiente invertimos la ubicacion de la segunda coleccion, primero la imagen, luego el texto */
+
+.collection :nth-child(2).collection__cover{
+  order: (-1);
+}
+
+.collection__content{ 
   display: flex;
   flex-direction: column;
   gap: var(--spacing-24);
+  align-items:start;
 }
 .collection__title{
   font-family: var(--alternative-font);
@@ -180,4 +188,105 @@ transition: background 0.3s ease-in-out;
   font-weight: 300;
   border-bottom: 2px solid var(--primary-solid);
   padding-bottom: var(--spacing-20);
+}
+.collection__link{
+  display: inline-block;
+  font-size: var(--font-medium);
+  background-color: var(--dark-bg--solid);
+  color: var(--light-font-solid);
+  padding: var(--spacing-16) var(--spacing-36);
+  border-radius: 50px;
+  font-weight: 500;
+  transition: background .3s ease-in-out;
+}
+.collection__link:hover{
+  background-color:var(--primary-900) ;
+ 
+}
+/*slider*/
+
+.slider{
+  display: flex;
+  flex-direction: column;
+  gap: var(--spacing-36);
+  margin: var(--spacing-68) auto;
+}
+.slider__title{
+  font-family: var(--alternative-font);
+  font-size: var(--font-display);
+}
+.slider__items{
+  display: flex;
+  gap: var(--spacing-24);
+  
+}
+
+card-item__cover{
+  display: flex;
+}
+
+.card-item__tag{
+  font-size: var(--font-xsmall);
+  background-color: var(--primary-solid);
+  color: var(--light-font-solid);
+  padding: var(--spacing-8) var(--spacing-12);
+  position: absolute;
+  
+}
+.card-item__cover img{
+  animation: fade 5s;
+}
+.card-item__img--back{
+  display: none;
+}
+.card-item__cover :hover .card-item__img--back{
+  display: block;
+}
+.card-item__cover :hover .card-item__img--front{
+  display: none;
+}
+.card-item__content{
+  display: flex;
+  flex-direction: column;
+  gap: var(--spacing-12);
+  padding: var(--16);
+
+}
+.card-item__license{
+  font-size: var(--font-xsmall);
+  color: var(--dark-solid);
+  font-weight: 500;
+}
+.card-item__name{
+  font-size: var(--font-medium);
+  color: var(--dark-solid);
+  font-weight: 700;
+}
+.card-item__price{
+  font-size: var(--font-xsmall);
+  color: var(--dark-solid);
+}
+.card-item__promo{
+  font-size: var(--font-xsmall);
+  color: var(--secondary-solid);
+  font-weight: 700;
+}
+/*footer*/
+.footer{
+  background-color: var(--dark-bg--solid);
+  padding: var(--spacing-68);
+
+}
+.footer__copy{
+  margin-top: var(--spacing-36);
+  text-align: center;
+}
+/*animacion*/
+@keyframes fade{
+  0%{
+    opacity: 0;
+  }
+  100%{
+    opacity: 1;
+  }
 }
