--- a/estilos/style.css
+++ b/estilos/style.css
@@ -167,9 +167,9 @@ transition: background 0.3s ease-in-out;
 }
 /* con lo siguiente invertimos la ubicacion de la segunda coleccion, primero la imagen, luego el texto */
 
-.collection :nth-child(2).collection__cover{
+/* .collection,.nth-child(2).collection__cover{
   order: (-1);
-}
+} */
 
 .collection__content{ 
   display: flex;
@@ -208,8 +208,9 @@ transition: background 0.3s ease-in-out;
 .slider{
   display: flex;
   flex-direction: column;
-  gap: var(--spacing-36);
-  margin: var(--spacing-68) auto;
+  gap: var(--spacing-12);
+  margin: var(--spacing-36) var(--spacing-24);
+  overflow: hidden;
 }
 .slider__title{
   font-family: var(--alternative-font);
@@ -217,12 +218,15 @@ transition: background 0.3s ease-in-out;
 }
 .slider__items{
   display: flex;
-  gap: var(--spacing-24);
+  gap: var(--spacing-12);
+  padding: var(--spacing-24) var(--spacing-16);
   
 }
 
 card-item__cover{
   display: flex;
+
+  
 }
 
 .card-item__tag{
@@ -231,20 +235,48 @@ card-item__cover{
   color: var(--light-font-solid);
   padding: var(--spacing-8) var(--spacing-12);
   position: absolute;
-  
+  right: 100px;
 }
-.card-item__cover img{
-  animation: fade 5s;
+
+
+
+
+.card-item   {
+  display: flex;
+  flex-direction: column;
+    width: 400px;
+    height: 400px;
+    position: relative;
+    overflow: hidden;
+   
+    
 }
-.card-item__img--back{
-  display: none;
+
+.card-item__img--front, .card-item__img--back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  transition: opacity 2s;
+  /* padding: var(--spacing-64) var(--spacing-20); */
 }
-.card-item__cover :hover .card-item__img--back{
-  display: block;
+
+.card-item__img--front {
+  opacity: 1;
 }
-.card-item__cover :hover .card-item__img--front{
-  display: none;
+
+.card-item__img--back {
+  opacity: 0;
 }
+
+.card-item:hover .card-item__img--front {
+  opacity: 0;
+}
+
+.card-item:hover .card-item__img--back{
+  opacity: 1;
+}
+
+
 .card-item__content{
   display: flex;
   flex-direction: column;
@@ -281,7 +313,7 @@ card-item__cover{
   margin-top: var(--spacing-36);
   text-align: center;
 }
-/*animacion*/
+/*animacion
 @keyframes fade{
   0%{
     opacity: 0;
@@ -289,4 +321,4 @@ card-item__cover{
   100%{
     opacity: 1;
   }
-}
+}*/
