--- a/estilos/style.css
+++ b/estilos/style.css
@@ -259,11 +259,17 @@ header {
   font-family: var(--alternative-font);
   font-size: var(--font-display);
 }
-
-.slider__items {
+/* quitamos estos estilos para que no entren en conflicto con los de la libreria glide */
+/* .slider__items {
   display: flex;
   gap: var(--spacing-12);
   padding: var(--spacing-24) var(--spacing-16);
+} */
+
+.iconify-icon{
+  color: var(--dark-bg--solid);
+  font-size: var(--font-small);
+  font-weight: 700;
 }
 
 .card-item__cover {
