--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,3 +1,7 @@
+@import url("http://cdn.jsdelivr.net/npm/@glidejs/glide/dist/css/glide.theme.min.css");
+@import url("http://cdn.jsdelivr.net/npm/@glidejs/glide/dist/css/glide.core.min.css");
+/* Estos dos enlaces son para poder trabajar con glidjs, sin usar express, para poder hacer el carussell  */
+
 :root {
   /* paleta de colores */
   --primary-solid: rgb(255, 51, 51);
@@ -383,8 +387,8 @@ header {
 .item__card-front,
 .item__card-back {
   position: absolute;
-   width: 100%;
-  height: 100%; 
+  width: 100%;
+  height: 100%;
 }
 .item__card-front {
   opacity: 1;
@@ -428,25 +432,32 @@ header {
 }
 .item__cart {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  padding: var(--spacing-16);
+  gap: var(--spacing-20);
 }
 .item__quantity {
   position: relative;
-  background-color: var(--light-bg-solid);
-  font-size: var(--font-large);
+  background-color: var(--dark-bg--solid);
+  font-size: var(--font-medium);
+  color: #fafaff;
   width: 50px;
   height: 50px;
 }
-.item__agregate {
+.item__input {
+  text-align: center;
   font-size: var(--font-medium);
+  width: 80px;
+}
+.item__agregate {
+  font-size: var(--font-small);
   width: 150px;
-  height: 80px;
+  height: 50px;
   background-color: var(--primary-900);
   padding: var(--spacing-12);
-  margin-top: 20px;
 }
 .item__promo {
-  font-size: var(--font-medium);
+  font-size: var(--font-xsmall);
 }
 
 /*animacion
