--- a/estilos/style.css
+++ b/estilos/style.css
@@ -415,31 +415,31 @@ header {
   font-weight: 700;
 }
 .item__info--name {
-  font-size: var(--font-large);
+  font-size: var(--font-xlarge);
   color: var(--dark-solid);
   font-weight: 700;
 }
 .item__info--description {
   font-size: var(--font-medium);
   color: var(--dark-solid);
-  /* padding: var(--spacing-20) var(--spacing-12); */
+
 }
 .item__info--price {
   font-size: var(--font-medium);
   color: var(--dark-solid);
   font-weight: 500;
-  padding: var(--spacing-24) var(--spacing-12);
+ padding: var(--spacing-8) var(--spacing-12); 
 }
 .item__cart {
   display: flex;
   flex-direction: row;
-  padding: var(--spacing-16);
+  padding: var(--spacing-12);
   gap: var(--spacing-20);
 }
 .item__quantity {
   position: relative;
   background-color: var(--dark-bg--solid);
-  font-size: var(--font-medium);
+  font-size: var(--font-large);
   color: #fafaff;
   width: 50px;
   height: 50px;
@@ -458,6 +458,7 @@ header {
 }
 .item__promo {
   font-size: var(--font-xsmall);
+  padding: var(--spacing-12);
 }
 
 /*animacion
