--- a/public/estilos/style.css
+++ b/public/estilos/style.css
@@ -103,59 +103,79 @@ header {
   background-color: var(--dark-bg--solid);
   padding: var(--spacing-36);
 }
-
-.nabvar {
+.navbar{
+  background-color: var(--color-dark-bg);
+  font-family: var(--font-base);
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-
-.nabvar__logo {
-  max-width: 300px;
-}
-
-.nabvar__menu {
+.navbar__list{
+  list-style: none;
   display: flex;
   align-items: center;
-  gap: var(--spacing-36);
+  gap: 20px;
 }
-
-/* esto sirvio para posicionar los elementos bajo el chevron */
-/* .submenu  :hover.submenu{
-  display: block;
-} */
-
-.nabvar__link {
-  font-size: var(--font-medium);
-  padding: var(--spacing-8) var(--spacing-16);
+.navbar__icon{
+  color: var(--light-font);
+}
+.navbar__link{
+  color: var(--light-font);
+  font-size: 14px;
+  text-decoration: none;
+  padding: 10px;
   display: inline-block;
   position: relative;
-  /* transition: background .3s ease-in-out;  */
 }
-
-.nabvar__link:hover {
-  background-color: var(--primary-900);
-}
-.with-icon {
+/* .navbar__item:nth-child(4){
+  border: 3px solid black;
+  position: relative;
+} */
+.navbar__link--icon{
   display: flex;
   align-items: center;
-  gap: var(--spacing-8);
+  gap: 5px;
 }
-.with-submenu:hover .submenu {
-  display: block;
+.navbar__link:hover{
+  color: #BCBCBC;
+  /* background-color: #505050; */
+}
+.navbar__link:hover .icon-animation{
+  transform: rotate(90deg);
+  transition: transform .3s;
 }
 
-.submenu {
+.navbar__item-cart{
+  background-color: var(--primary-solid);
+  padding: 5px;
+  border-radius: 4px;
+  position: absolute;
+  top: -15px;
+}
+.submenu{
   display: none;
   position: absolute;
   background-color: var(--dark-bg--solid);
-  width: 300px;
+  font-size: 13px;
+  list-style: none;
+  padding: 0px;
+  z-index: 50;
 }
-.submenu__link {
+.navbar__item--with-submenu:hover .submenu{
   display: block;
-  padding: var(--spacing-8) var(--spacing-16);
-  font-size: var(--font-medium);
 }
+.submenu__link{
+  text-decoration: none;
+  color: var(--light-font);
+  display: block;
+  padding: 8px;
+  margin-right: 50px;
+}
+.submenu__link:hover{
+  color: #BCBCBC;
+}
+
+
 
 .hero {
   background-image: url(../img/multimedia/funkos-banner.webp);
@@ -361,15 +381,6 @@ header {
 }
 
 /*footer*/
-.footer {
-  background-color: var(--dark-bg--solid);
-  padding: var(--spacing-48) var(--spacing-36);
-}
-
-.footer__copy {
-  margin-top: var(--spacing-24);
-  text-align: center;
-}
 .item {
   display: flex;
   flex-direction: row;
@@ -415,31 +426,31 @@ header {
   font-weight: 700;
 }
 .item__info--name {
-  font-size: var(--font-xlarge);
+  font-size: var(--font-large);
   color: var(--dark-solid);
   font-weight: 700;
 }
 .item__info--description {
   font-size: var(--font-medium);
   color: var(--dark-solid);
-
+  /* padding: var(--spacing-20) var(--spacing-12); */
 }
 .item__info--price {
   font-size: var(--font-medium);
   color: var(--dark-solid);
   font-weight: 500;
- padding: var(--spacing-8) var(--spacing-12); 
+  padding: var(--spacing-24) var(--spacing-12);
 }
 .item__cart {
   display: flex;
   flex-direction: row;
-  padding: var(--spacing-12);
+  padding: var(--spacing-16);
   gap: var(--spacing-20);
 }
 .item__quantity {
   position: relative;
   background-color: var(--dark-bg--solid);
-  font-size: var(--font-large);
+  font-size: var(--font-medium);
   color: #fafaff;
   width: 50px;
   height: 50px;
@@ -451,14 +462,16 @@ header {
 }
 .item__agregate {
   font-size: var(--font-small);
-  width: 150px;
-  height: 50px;
+  /* width: 150px; */
+  /* height: 50px; */
   background-color: var(--primary-900);
   padding: var(--spacing-12);
 }
 .item__promo {
   font-size: var(--font-xsmall);
-  padding: var(--spacing-12);
+}
+.item__promo a{
+  color: rgb(48, 114, 255);
 }
 
 /*animacion
@@ -470,3 +483,26 @@ header {
     opacity: 1;
   }
 }*/
+.footer{
+  background-color: var(  --dark-bg--solid);
+}
+.footer__container{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 240px;
+}
+.footer__list{
+  display: block;
+  padding: 15px;
+}
+.footer__item{
+  list-style: none;
+}
+.footer__rights{
+  padding: 6px;
+  align-self: flex-end;
+}
+.footer__text{
+  color: var(--light-font);
+}
