--- a/src/views/inicio.ejs
+++ b/src/views/inicio.ejs
@@ -1,67 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="Somos alumnos de Codo a Codo, del curso Node JS-JavaScript, comision 23568, con el profesor Sr Alberto Gabriel Feldman"
-    />
-    <meta
-      name="keywords"
-      content="Tienda Funkoshop, articulos de las sagas Star Wars, Pockemon, Harry Potter. Funkos, Remeras, Llaveros"
-    />
-    <title>Home-Funkoshop</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
-      crossorigin="anonymous"
-    />
-
-    <link rel="stylesheet" href="./estilos/style.css" />
-  </head>
-  <body>
-    <!-- header -->
-    <header>
-      <nav class="navbar container">
-        <div class="navbar__logo">
-            <a href="../public/pages/shop/shop.html" class="navbar__link-banner">
-                <img src="/public/img/multimedia/branding/logo_light_horizontal.svg" alt="logo_FUNKOSHOP" class="navbar__img">
-            </a>
-        </div>
-    
-        <ul class="navbar__list">
-            <li class="navbar__item navbar__item--with-submenu">
-                <a href="/public/pages/shop/shop.html" class="navbar__link navbar__link--icon">SHOP<i class="fa-solid fa-angle-right icon-animation " class="navbar__icon"></i></a>
-                <ul class="submenu">
-                    <li class="submenu__item">
-                        <a href="../pages/index.html" class="submenu__link">FUNKOS</a>
-                    </li>
-                    <li class="submenu__item">
-                        <a href="#" class="submenu__link">LLAVEROS</a>
-                    </li>
-                    <li class="submenu__item">
-                        <a href="#" class="submenu__link">REMERAS</a>
-                    </li>
-                </ul>
-            </li>
-            <li class="navbar__item">
-                <a href="/public/pages/shop/contacto.html" class="navbar__link">CONTACTO</a>
-            </li>
-            <li class="navbar__item">
-                <a href="/public/pages/admin/login.html" class="navbar__link">LOGIN</a>
-            </li>
-            <li class="navbar__item">
-                <a href="/public/pages/shop/carrito.html" class="navbar__link">
-                    <i class="fa-solid fa-cart-shopping"></i>
-                    <span class="navbar__item-cart">0</span>
-                </a>
-            </li>
-        </ul>
-    </nav>
-    </header>
-
+<%- include('./partials/header') %>
     <!-- seccion correspondiente al banner -->
     <section class="hero">
       <article class="hero__content container">
@@ -242,7 +179,7 @@
               <p class="footer__text"> Comision 23568 Grupo 7</p>
           </div>
           <div class="footer__logo ">
-              <img src="../public/img/multimedia/branding/isotype.svg" alt="logo_FUNKOSHOP" class="footer__img">
+              <img src="/img/multimedia/branding/isotype.svg" alt="logo_FUNKOSHOP" class="footer__img">
           </div>
       </div>
   </footer>
