--- a/src/views/shop/shop.ejs
+++ b/src/views/shop/shop.ejs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shop | Funkoshop</title>
-    <link rel="stylesheet" href="/public/estilos/shop.css">
+    <link rel="stylesheet" href="/estilos/shop.css">
 </head>
 
 <body>
@@ -13,7 +13,7 @@
         <nav class="navbar container">
             <div class="navbar__logo">
                 <a href="../../inicio.html" class="navbar__link-banner">
-                    <img src="../../img/multimedia/branding/logo_light_horizontal.svg" alt="logo_FUNKOSHOP" class="navbar__img">
+                    <img src="/img/multimedia/branding/logo_light_horizontal.svg" alt="logo_FUNKOSHOP" class="navbar__img">
                 </a>
             </div>
         
@@ -133,7 +133,7 @@
                 </li>
             </ul>
             <picture>
-                <img src="../../img/multimedia/branding/isotype.svg" alt="Isotipo de la marca Funkoshop">
+                <img src="/img/multimedia/branding/isotype.svg" alt="Isotipo de la marca Funkoshop">
             </picture>
         </nav>
         <p class="footer__copy">
